section mobile fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -58,12 +58,13 @@ body {
   top: 8vh;
   top: 60px;
   right: 0px;
-  width: 190px;
   height: 1px;
   background-color: rgb(0, 0, 0);
   z-index: 30;
   transform-origin: right;
   transform-style: flat;
+  transition-timing-function: ease-in-out;
+  transition-duration: 400ms;
 }
 
 .header a {
@@ -408,12 +409,7 @@ img {
 }
 
 @media only screen and (max-width: 960px) {
-  .main {
-    width: 100vw;
-    overflow: hidden;
-  }
   #section {
-    background-color: red;
     font-size: 40pt;
     top: 20px;
     font-family: BluuNext;
@@ -422,6 +418,8 @@ img {
     left: 0;
     right: 0;
     margin: 0 auto;
+    width: -moz-fit-content;
+    width: fit-content;
   }
   .header a {
     display: none;
